--- a/src/pages/grupos/grupos.html
+++ b/src/pages/grupos/grupos.html
@@ -16,7 +16,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content id="backList">
 	<ion-refresher (ionRefresh)="refresh($event)">
 		<ion-refresher-content
 			pullingIcon="arrow-dropdown"
@@ -26,18 +26,25 @@
 		</ion-refresher-content>
 	</ion-refresher>
 
+	<div *ngIf="grupos.length == 0" class="empty">
+		<div text-center>
+			<h2>Nenhum Registro<br>encontrado!</h2>
+			<img src="assets/imgs/error.png">
+		</div>
+	</div>
+	
 	<ion-list>
-		<ion-item-sliding #slidingItem *ngFor="let grupo of grupos" bottom>
-			<ion-item-options side="left">
+		<ion-item-sliding #slidingItem *ngFor="let grupo of grupos">
+			<ion-item-options side="left" *ngIf="checkPermission('del')">
 				<button ion-button color="danger" (click)="alertConfirm(grupo,slidingItem)">
 					<ion-icon name="trash"></ion-icon>
 					excluir
 				</button>
 			</ion-item-options>
 			<ion-item>
-				{{ grupo.name }}
+				<ion-label padding>{{ grupo.name }}</ion-label>
 			</ion-item>
-			<ion-item-options side="right">
+			<ion-item-options side="right" *ngIf="checkPermission('edit')">
 				<button ion-button color="primary" (click)="editar(grupo,slidingItem)">
 					<ion-icon name="create"></ion-icon>
 					editar
@@ -46,7 +53,7 @@
 		</ion-item-sliding>
 	</ion-list>
 
-	<ion-fab bottom right>
+	<ion-fab bottom right *ngIf="checkPermission('add')">
 		<button color="secondary" ion-fab (click)="inserir()"><ion-icon name="md-add"></ion-icon></button>
 	</ion-fab>
 </ion-content>
