--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" type="text/css" href="https://daneden.github.io/animate.css/animate.min.css">
   <meta name="theme-color" content="#4e8ef7">
 
   <!-- add to homescreen for ios -->
