--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -6,33 +6,45 @@
 -->
 <ion-header>
 
-  	<ion-navbar color="secondary">
-	  	<button ion-button menuToggle icon-only>
-	      	<ion-icon name='menu'></ion-icon>
-	    </button>
-	    <ion-title>Dashboard</ion-title>
-  	</ion-navbar>
+	<ion-navbar color="secondary">
+		<button ion-button menuToggle icon-only>
+			<ion-icon name='menu'></ion-icon>
+		</button>
+		<ion-title>Painel de Controle</ion-title>
+	</ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
 	<ion-refresher (ionRefresh)="refresh($event)">
-      	<ion-refresher-content
-        	pullingIcon="arrow-dropdown"
-	        pullingText="Puxe para atualizar"
-	        refreshingSpinner="circles"
-	        refreshingText="Atualizando...">
-      	</ion-refresher-content>
-    </ion-refresher>
+		<ion-refresher-content
+			pullingIcon="arrow-dropdown"
+			pullingText="Puxe para atualizar"
+			refreshingSpinner="circles"
+			refreshingText="Atualizando...">
+		</ion-refresher-content>
+	</ion-refresher>
 
-    <ion-card>
-      	<ion-card-header>
-        	Consumo de Água
-      	</ion-card-header>
-      	<ion-card-content>
-        	<canvas #lineCanvas></canvas>
-      	</ion-card-content>
-    </ion-card>
+	<ion-card>
+		<ion-card-header>Consumo de Água</ion-card-header>
+		<ion-card-content>
+			<canvas #chartConsumo></canvas>
+		</ion-card-content>
+	</ion-card>
+
+	<ion-card>
+		<ion-card-header>Temperatura</ion-card-header>
+		<ion-card-content>
+			<canvas #chartTemp></canvas>
+		</ion-card-content>
+	</ion-card>
+
+	<ion-card>
+		<ion-card-header>Umidade</ion-card-header>
+		<ion-card-content>
+			<canvas #chartUmi></canvas>
+		</ion-card-content>
+	</ion-card>
 
 </ion-content>
