--- a/src/pages/usuarios/usuarios.html
+++ b/src/pages/usuarios/usuarios.html
@@ -6,13 +6,58 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>usuarios</ion-title>
-  </ion-navbar>
+	<ion-navbar color="secondary">
+		<button ion-button menuToggle icon-only>
+			<ion-icon name='menu'></ion-icon>
+		</button>
+		<ion-title>Usuários</ion-title>
+	</ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content id="backList">
+	<ion-refresher (ionRefresh)="refresh($event)">
+		<ion-refresher-content
+			pullingIcon="arrow-dropdown"
+			pullingText="Puxe para atualizar"
+			refreshingSpinner="circles"
+			refreshingText="Atualizando...">
+		</ion-refresher-content>
+	</ion-refresher>
 
+	<div *ngIf="users.length == 0" class="empty">
+		<div text-center>
+			<h2>Nenhum Registro<br>encontrado!</h2>
+			<img src="assets/imgs/error.png">
+		</div>
+	</div>
+
+	<ion-list>
+		<ion-item-sliding #slidingItem *ngFor="let user of users">
+			<ion-item-options side="left" *ngIf="checkPermission('del')">
+				<button ion-button color="danger" (click)="alertConfirm(user,slidingItem)">
+					<ion-icon name="trash"></ion-icon>
+					excluir
+				</button>
+			</ion-item-options>
+			<ion-item>
+				<ion-label padding>{{user.name}}</ion-label>
+			</ion-item>
+			<ion-item-options side="right">
+				<button ion-button color="dark" (click)="senha(user,slidingItem)">
+					<ion-icon name="lock"></ion-icon>
+					alterar Senha
+				</button>
+				<button ion-button color="primary" (click)="editar(user,slidingItem)" *ngIf="checkPermission('edit')">
+					<ion-icon name="create"></ion-icon>
+					editar
+				</button>
+			</ion-item-options>
+		</ion-item-sliding>
+	</ion-list>
+
+	<ion-fab bottom right *ngIf="checkPermission('add')">
+		<button color="secondary" ion-fab (click)="inserir()"><ion-icon name="md-add"></ion-icon></button>
+	</ion-fab>
 </ion-content>
