--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -5,6 +5,11 @@
   Ionic pages and navigation.
 -->
 <ion-content padding>
+
+	<ion-fab top left>
+		<button color="secondary" ion-fab (click)="pageConfig()"><ion-icon name="md-cog"></ion-icon></button>
+	</ion-fab>
+
 	<div padding margin>
 		<img src="assets/imgs/image.png">
 	</div>
